fixed bug where footer floated on mobile devices

--- a/youPickeDiss.css
+++ b/youPickeDiss.css
@@ -12,6 +12,15 @@
     }
 }
 
+body{
+    min-height: 100vh !important;
+    display:flex; 
+    flex-direction:column;
+}
+
+html {
+    height: 100vh;
+}
 
 td {
     padding-bottom: 1em;
